# dotfiles

./: Cargo.toml  README.md
docs/sample-dotfiles/.config/dotfiles/: config.toml
src/: cli.rs  config.rs  errors.rs  files.rs  lib.rs  main.rs
src/commands/: add.rs  mod.rs  status.rs
