[package]
authors = ["remolueoend <remolueoend@users.noreply.github.com>"]
edition = "2018"
name = "dotfiles"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2"
colored = "^2"
dirs = "^3"
serde = {version = "^1", features = ["derive"]}
toml = "^0.5"
