[package]
authors = ["remolueoend <remolueoend@users.noreply.github.com>"]
edition = "2018"
name = "dotfiles"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "^2"
dirs = "^3"
promptly = "^0.3"
serde = {version = "^1", features = ["derive"]}
toml = "^0.5"

[dependencies.clap]
features = ["color", "wrap_help"]
version = "^2"
